[package]
name = "wrt-helper"
version.workspace = true
edition.workspace = true
description = "Helper library for WRT AOT runtime, providing C ABI for complex Wasm operations."
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords = ["wasm", "webassembly", "aot", "runtime", "cabi", "no_std"]
categories = ["wasm", "no-std", "embedded"]

[features]
default = ["std"]
# Binary choice: std OR no_std (no alloc middle ground)

# Standard library support (can be disabled for no_std environments)
std = ["wrt-foundation/std",
    # Add other std dependencies if needed, e.g., for PAL backends
]


# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Feature to select the target platform for PAL
platform-macos = []
platform-linux = []
platform-qnx = []
platform-zephyr = []
platform-baremetal = []

# Optional Arm Hardening features (passed via PAL or compiler flags)
arm-hardening = []

# Disable panic handler for library builds to avoid conflicts
disable-panic-handler = []

[dependencies]
wrt-foundation = { workspace = true, default-features = false }
# libc = { version = "0.2", default-features = false, optional = true } # For C types if needed

# PAL dependency - this will be a new crate or an existing one
# wrt-platform = { path = "../wrt-platform", optional = true }


[lints]
workspace = true 