[package]
name = "wrt-host"
version.workspace = true
edition.workspace = true
description = "Host function infrastructure for the WebAssembly Runtime (WRT)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-host"
keywords = ["wasm", "webassembly", "runtime", "host", "component-model"]
categories = ["wasm", "no-std"]

[dependencies]
wrt-error = { path = "../wrt-error", workspace = true, default-features = false }
wrt-types = { path = "../wrt-types", workspace = true, default-features = false }
wrt-intercept = { path = "../wrt-intercept", workspace = true, default-features = false }
wrt-sync = { path = "../wrt-sync", workspace = true, default-features = false }

# Std dependencies
log = { version = "0.4", optional = true }

# Feature gates
[features]
default = ["std"]
std = ["log", "wrt-error/std", "wrt-types/std", "wrt-intercept/std", "wrt-sync/std"]
no_std = ["wrt-error/no_std", "wrt-types/no_std", "wrt-intercept/no_std", "wrt-sync/no_std"]
alloc = ["wrt-error/alloc", "wrt-types/alloc", "wrt-intercept/alloc", "wrt-sync/alloc"]
optimize = ["wrt-error/optimize", "wrt-types/optimize", "wrt-intercept/optimize", "wrt-sync/optimize"]
safety = ["wrt-error/safety", "wrt-types/safety", "wrt-intercept/safety", "wrt-sync/safety", "alloc"]
kani = ["wrt-intercept/kani"]

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)', 'cfg(kani)', 'cfg(coverage)', 'cfg(doc)'] }
# Rule 1
pointer_cast = "deny"
# Rule 9
missing_docs = "deny"
unsafe_code = "forbid"

[lints.clippy]
# Rule 1: Language subset
inline_asm_x86_att_syntax = "warn"
transmute_ptr_to_ref = "deny"
type_id = "deny"
dyn_trait = "warn"
float_arithmetic = "warn"
# Rule 2: Unsafe usage
ptr_offset_with_cast = "warn"
# Rule 3: Error handling & panics
unwrap_used = "warn"
panic = "warn" # Also covers Rule 4
result_unit_err = "warn"
let_underscore_drop = "warn"
must_use_candidate = "warn"
must_use_unit = "warn"
# Rule 4: Control-flow soundness
match_wildcard_for_single_variants = "warn"
never_loop = "warn"
unreachable = "warn" # Also related to Rule 4
# Rule 5: Memory & concurrency safety
static_mut_reference = "deny"
arc_mutate = "deny"
# Rule 8: Static analysis gates (CI)
pedantic = "warn"
# Rule 9: Documentation
debug_assert_with_mut_call = "warn" 