[package]
name = "wrt-instructions"
version.workspace = true
edition.workspace = true
description = "WebAssembly instruction implementations for the WRT runtime"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wasm", "webassembly", "instructions", "interpreter", "no-std"]
categories = ["wasm", "emulators", "no-std", "embedded"]

[features]
default = []
std = [
    "wrt-foundation/std",
    "wrt-sync/std",
    "wrt-math/std",
    "dep:log",
]
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []
alloc = ["wrt-foundation/alloc", "wrt-sync/alloc", "wrt-math/alloc", "dep:alloc"]
optimize = ["wrt-foundation/optimize"]
safety = ["wrt-foundation/safety"]

# Disable panic handler for library builds to avoid conflicts
disable-panic-handler = [
    "wrt-error/disable-panic-handler",
    "wrt-foundation/disable-panic-handler", 
    "wrt-sync/disable-panic-handler",
    "wrt-math/disable-panic-handler"
]

[dependencies]
wrt-error = { workspace = true }
wrt-foundation = { workspace = true }
wrt-sync = { workspace = true }
wrt-math = { workspace = true }
log = { version = "0.4", optional = true }

# No-std support
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[dev-dependencies]
proptest = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }
unsafe_code = "forbid"
missing_docs = "allow" # Temporarily allowing missing docs - will be added systematically
# pointer_cast is not a valid Rust lint

[lints.clippy]
inline_asm_x86_att_syntax = "warn"
transmute_ptr_to_ref = "deny"
type_id = "deny"
dyn_trait = "warn"
float_arithmetic = "warn"
ptr_offset_with_cast = "warn"
unwrap_used = "warn"
panic = "warn"
result_unit_err = "warn"
let_underscore_drop = "warn"
must_use_candidate = "warn"
must_use_unit = "warn"
match_wildcard_for_single_variants = "warn"
never_loop = "warn"
unreachable = "warn"
static_mut_refs = "deny"
arc_mutate = "deny"
pedantic = "warn" # TODO: Enable pedantic again when dependencies are clean
debug_assert_with_mut_call = "warn" 