[package]
name = "wrt-intercept"
version.workspace = true
edition.workspace = true
description = "Host interception for WebAssembly Runtime (WRT)"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-intercept"
keywords = ["wasm", "webassembly", "runtime", "interception"]
categories = ["wasm", "no-std"]

[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-foundation = { workspace = true, default-features = false }
wrt-sync = { workspace = true, default-features = false }

# Optional dependencies
log = { version = "0.4", optional = true }
# For formal verification when 'kani' feature is enabled
kani-verifier = { version = "0.62.0", optional = true }

[dev-dependencies]
chrono = "0.4"  # For examples
pretty_assertions = "1.4.0"

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["wrt-foundation/std", "wrt-sync/std", "log"]
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = ["wrt-foundation/alloc"]
optimize = ["wrt-foundation/optimize"]

# Safety level presets using capability-based features
qm = ["wrt-foundation/dynamic-allocation"]
asil-a = ["wrt-foundation/bounded-collections"]
asil-b = ["wrt-foundation/bounded-collections"]
asil-c = ["wrt-foundation/static-memory-safety"]
asil-d = ["wrt-foundation/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

kani = ["dep:kani-verifier"]


[lints]
rust.unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)', 'cfg(coverage)', 'cfg(doc)'] }
rust.unsafe_code = "forbid" # Rule 2: #![forbid(unsafe_code)]
rust.missing_docs = "deny" # Rule 9, ADDED/ENSURED

clippy.pedantic = "warn"
clippy.unwrap_used = "deny" # Rule 3
clippy.expect_used = "deny" # Rule 3
clippy.panic = "deny" # Rule 3 & 4
clippy.todo = "deny" # Rule 3
clippy.unimplemented = "deny" # Rule 3
clippy.match_wildcard_for_single_variants = "warn" # Rule 4
clippy.never_loop = "warn" # Rule 4
clippy.unreachable = "deny" # Rule 4
clippy.float_arithmetic = "warn" # Rule 1
clippy.inline_asm_x86_att_syntax = "deny" # Rule 1
clippy.transmute_ptr_to_ref = "deny" # Rule 1
# clippy.type_id removed - not a valid clippy lint
clippy.dyn_trait = "warn" # Rule 1
clippy.ptr_offset_with_cast = "warn" # Rule 2
clippy.result_unit_err = "warn" # Rule 3
# Note: let_underscore_drop was promoted from clippy to rustc in Rust 1.60
# Using the rust prefix for rustc lints
rust.let_underscore_drop = { level = "warn", priority = -1 } # Rule 3
clippy.must_use_candidate = "warn" # Rule 3
# clippy.static_mut_reference renamed to static_mut_refs in newer Rust versions
clippy.arc_mutate = "deny" # Rule 5
clippy.missing_docs_in_private_items = "allow" # To be reviewed if too noisy
clippy.debug_assert_with_mut_call = "warn" # Rule 9, ADDED

# Configuration for Kani verification
# This will only be used when running `cargo kani`
[package.metadata.kani]
enabled-checks = ["assertion", "overflow"]
default-unwind = 2 